[package]
name = "scotschotte"
version = "0.1.0"
authors = ["Scott Harper <orcein@gmail.com>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rawloader = "*"
vulkano = "0.13"
vulkano-shaders = "0.13"
vulkano-win = "0.13"
winit = ""
